# kanji-extractor

./: .gitignore  CsvToJson.py  HtmlExtractor.py  kanji.json  kanji_n1.json  kanji_references_new.json  kanji_sub.json  kanji_wordbook.py  main.py  pyproject.toml  readme.md  requirements.txt
